# keep-sse

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
specs/2026-07-03-code-review-fixes/: api.md  design.md  plan.md  proposal.md
specs/2026-07-03-llm-sse-gateway/: api.md  design.md  plan.md  proposal.md
specs/2026-07-03-sse-delayed-200/: design.md  plan.md  proposal.md
specs/2026-07-05-boundary-tracker-memchr/: design.md  plan.md  proposal.md
specs/2026-07-05-cpu-profiling/: design.md  plan.md  proposal.md
specs/2026-07-05-reduce-per-request-alloc/: design.md  plan.md  proposal.md
specs/2026-07-05-reuse-tokio-sleep/: design.md  plan.md  proposal.md
specs/2026-07-05-sse-accept-header/: design.md  plan.md  proposal.md
specs/2026-07-07-sse-no-downstream-compression/: design.md  plan.md  proposal.md
src/: config.rs  detect.rs  encoding.rs  error_event.rs  lib.rs  main.rs  pprof.rs  proxy.rs  server.rs  sse.rs
tests/: gateway.rs
