[package]
name = "keep-sse"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "zlib", "brotli", "zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
http = "1"

[dev-dependencies]
flate2 = "1"
zstd = "0.13"

[profile.release]
lto = "thin"
